add the index link

--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">Go to Profile</a>
+    <h1>Natanon Somboon</h1>
 </body>
 </html>
