--- a/friend.html
+++ b/friend.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Friend</title>
 </head>
 <body>
-    <a href="profile.html">Go to Profile</a>
-    <a href="friend.html">Go to Friend</a>
+    <h1>Friend Page</h1>
+    <p>This is the friend page.</p>
+    <p>Nattapoom Saengkaew</p>
 </body>
 </html>
