add profile picture

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <a href="profile.html">Go to Profile</a>
+    <p> - </p>
+    <img src="Profile.jpg" alt="A cute cat">
 </body>
 </html>
